--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "practice kata",
   "main": "main.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "npx vitest run --coverage",
     "watch-ts": "npx tsc --watch"
   },
