updated README.md; removed & disabled ts sourcemaps; added github action for PRs approvals

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "npx vitest run --coverage",
-    "watch-ts": "npx tsc --watch"
+    "test": "npx vitest run --coverage"
   },
   "repository": {
     "type": "git",
